[package]
name = "dbo2taxer"
version = "0.1.0-alpha.0"
edition = "2024"
description = "Simple cli to prepare taxer data from DBO statements"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dbo_csv = { git = "https://github.com/dimasmith/dbo_csv" }
taxer_csv = { git = "https://github.com/dimasmith/taxer_csv" }
