[package]
name = "dbo2taxer"
version = "0.1.0-alpha.0"
edition = "2024"
description = "Simple cli to prepare taxer data from DBO statements"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
config = "0.15.13"
dbo_csv = { git = "https://github.com/dimasmith/dbo_csv" }
serde = { version = "1.0.219", features = ["derive"] }
taxer_csv = { git = "https://github.com/dimasmith/taxer_csv" }
